Make sure privacy policy headline can wrap and does not make the site x-scrollable on smartphones

--- a/style.css
+++ b/style.css
@@ -327,6 +327,10 @@ h3 {
 	font-size: 0.8em;
 }
 
+.break-anywhere {
+	overflow-wrap: anywhere;
+}
+
 /* mobile styles */
 @media only screen and (min-width: 993px) {
 	.wrapper {
